// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`As Button 1`] = `
<button
  type="button"
  data-variant="default"
  data-color="support1"
>
  <div>
    <h2>
      Kort som knapp med blokker
    </h2>
  </div>
  <div>
    <p data-variant="default">
      Eksempel på kort som knapp som er delt opp med blokker
    </p>
  </div>
</button>
<button
  type="button"
  data-variant="default"
  data-color="neutral"
>
  <h2>
    Kort som knapp
  </h2>
  <p data-variant="default">
    Eksempel på kort som knapp uten blokker
  </p>
</button>
`;

exports[`As Link 1`] = `
<a
  href="https://udir.no"
  target="_blank"
  rel="noopener noreferrer"
  data-variant="default"
  data-color="support1"
>
  <div>
    <h2>
      Lenkekort med blokker
    </h2>
  </div>
  <div>
    <p data-variant="default">
      Eksempel på kort som lenke som er delt opp med blokker
    </p>
  </div>
</a>
<a
  href="https://udir.no"
  target="_blank"
  rel="noopener noreferrer"
  data-variant="default"
  data-color="neutral"
>
  <h2>
    Lenkekort
  </h2>
  <p data-variant="default">
    Eksempel på kort som lenke uten blokker
  </p>
</a>
`;

exports[`Composed 1`] = `
<div data-variant="default">
  <div>
    <div style="display: flex; justify-content: space-between; align-items: center;">
      <h2>
        Rolle 1
      </h2>
      <button
        data-variant="secondary"
        type="button"
        data-color="danger"
        data-size="sm"
      >
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="1em"
          height="1em"
          fill="none"
          viewbox="0 0 24 24"
          focusable="false"
          role="img"
          aria-hidden="true"
        >
          <path
            fill="currentColor"
            fill-rule="evenodd"
            d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
            clip-rule="evenodd"
          >
          </path>
        </svg>
        Fjern
      </button>
    </div>
  </div>
  <div>
    <div>
      <label
        data-weight="medium"
        for="components-card--composed-role"
      >
        Velg rolle
      </label>
      <select id="components-card--composed-role">
        <option value="lærer">
          Lærer
        </option>
        <option value="elev">
          Elev
        </option>
        <option value="forelder">
          Forelder
        </option>
      </select>
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-card--composed-nationality-number"
      >
        Fødselsnummer
      </label>
      <div>
        <input
          id="components-card--composed-nationality-number"
          type="text"
        >
      </div>
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-card--composed-last-name"
      >
        Etternavn
      </label>
      <div>
        <input
          id="components-card--composed-last-name"
          type="text"
        >
      </div>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      data-size="sm"
    >
      Legg til rolle
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M12.75 5.5a.75.75 0 0 0-1.5 0v5.75H5.5a.75.75 0 0 0 0 1.5h5.75v5.75a.75.75 0 0 0 1.5 0v-5.75h5.75a.75.75 0 0 0 0-1.5h-5.75z"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Horizontal 1`] = `
<div
  data-variant="default"
  style="display: grid; grid-template-columns: 1fr 1fr;"
>
  <div>
    <h2>
      Kort med grid
    </h2>
  </div>
  <div>
    <p data-variant="default">
      Eksempel på hvordan du kan bruke et kort horisontalt ved bruk av grid.
    </p>
  </div>
</div>
`;

exports[`Media 1`] = `
<div data-variant="default">
  <div>
    <img
      alt="skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
</div>
<div data-variant="default">
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
  <div>
    <img
      alt="skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`Preview 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <h2>
    Kort
  </h2>
  <p data-variant="default">
    Innhold
  </p>
  <p
    data-variant="default"
    data-size="sm"
  >
    Fotnote
  </p>
</div>
`;

exports[`Variants 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="neutral"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="accent"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="support1"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="support1"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="support2"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="support2"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
`;

exports[`Video 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <div>
    <iframe
      data-chromatic="ignore"
      src="https://player.vimeo.com/video/992000551?h=03734e8f67"
      width="320px"
      height="179px"
      allow="autoplay; fullscreen; picture-in-picture"
      title="30 år med digitalt innsyn"
    >
    </iframe>
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/regelverk-og-tilsyn/skole-og-opplaring/filmer/"
        target="_blank"
        rel="noreferrer"
      >
        Ny opplæringslov
      </a>
    </h2>
    <p data-variant="default">
      Kunnskapsminister Kari Nessa Nordtun om den nye opplæringsloven.
    </p>
  </div>
</div>
`;

exports[`With Link 1`] = `
<div
  data-variant="default"
  data-color="support1"
>
  <div>
    <img
      alt="studenter"
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="neutral"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt="studenter"
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;
